# autocube-tilda-1c

./: .env.example  pyproject.toml
src/: config.py  dropbox_images.py  entities.py  images.py  main.py  odata_1c.py  state.py  tilda.py
