[tool.poetry]
name = "autocube-tilda-1c"
version = "0.1.0"
description = ""
authors = ["nktrnv <nktrnv@gmail.com>"]
readme = "README.md"
packages = [{include = "autocube_tilda_1c"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
selenium = "^4.11.2"
requests = "^2.31.0"
dropbox = "^11.36.2"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
